# django-movie-interview-test

./: .gitignore  pyproject.toml
movies/: admin.py  models.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_alter_genre_name_alter_mpaarating_label.py  0003_alter_genre_name_alter_movie_image_and_more.py  0004_alter_movie_mpaarating.py  0005_alter_movie_userrating.py  0006_alter_movie_userrating.py  0007_alter_mpaarating_label.py
movies/templates/: base.html  movie-detail.html  movie-list.html
movies_site/: asgi.py  settings.py  urls.py  wsgi.py
static/: style.css
