[tool.poetry]
name = "movies"
version = "0.1.0"
description = "django app for interview"
authors = ["raizalas <ashari.raizal17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
